# Fil-Rouge-Sales-Forecast

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  app.py
app/analytics/: __init__.py  db.py  query_executor.py
app/forecast/: ml_forecast.py
app/llm/: __init__.py  explanation.py  sql_generator.py
app/rag/: knowledge_base.md
artefacts/runs_ml/global/run_20260208_202208/: metrics.csv  run_config.json
artefacts/runs_ml/region/run_20260208_202252/: metrics.csv  run_config.json
artefacts/runs_ts/region_Central-West/run_20260208_202402/: benchmark.csv
artefacts/runs_ts/region_North/run_20260208_202402/: benchmark.csv
data/interim/: sales_global_day_base.parquet  sales_region_day_base.parquet
data/processed/: train_global.parquet  train_region.parquet
fil_rouge/: config.py  dataset.py  evaluate.py  features.py  io.py  preprocess.py  registry.py  split.py
fil_rouge/pipelines/data/: make_dataset.py
fil_rouge/pipelines/ml/: benchmark_ml.py  predict_ml.py  train_ml_global.py  train_ml_region.py
fil_rouge/pipelines/ts/: models_hw.py  models_prophet.py  models_sarimax.py  train_ts_region.py
model_store/latest/ml_global/: metrics.json
model_store/latest/ml_region/: metrics.json  pipeline.joblib
model_store/latest/ts_region/South/: model.pkl  (+2 more)
model_store/runs/run_20260208_010741/: artifacts.json  leaderboard.csv  metrics.json
scripts/: benchmark.py  load_analytics_db.py  make_dataset.py  run_all.py  sanity_check.py  train_ml_global.py  train_ml_region.py  train_ts_region.py
(+12 files in other folders)
